--- a/css/style.css
+++ b/css/style.css
@@ -29974,7 +29974,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 }
 
 .rd-navbar-default.rd-navbar-fixed .rd-navbar-nav li a, .rd-navbar-sidebar-toggle.rd-navbar-fixed .rd-navbar-nav li a, .rd-navbar-transparent.rd-navbar-fixed .rd-navbar-nav li a, .rd-navbar-center.rd-navbar-fixed .rd-navbar-nav li a, .rd-navbar-minimal.rd-navbar-fixed .rd-navbar-nav li a, .rd-navbar-humburger-menu.rd-navbar-fixed .rd-navbar-nav li a, .rd-navbar-default.rd-navbar-static .rd-navbar-nav > li > a, .rd-navbar-transparent.rd-navbar-static .rd-navbar-nav > li > a, .rd-navbar-center.rd-navbar-static .rd-navbar-nav > li > a, .rd-navbar-minimal.rd-navbar-static .rd-navbar-nav > li > a, .rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-transparent.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-center.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-minimal.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-default.rd-navbar-static .rd-navbar-megamenu li > a, .rd-navbar-transparent.rd-navbar-static .rd-navbar-megamenu li > a, .rd-navbar-center.rd-navbar-static .rd-navbar-megamenu li > a, .rd-navbar-minimal.rd-navbar-static .rd-navbar-megamenu li > a {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 700;
   line-height: 24px;
   text-transform: capitalize;
@@ -29991,6 +29991,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
   list-style-type: none;
   margin-bottom: 0;
 }
+
 
 .rd-navbar a {
   transition: .3s all ease;
@@ -30840,8 +30841,8 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 }
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-dropdown > a:after, .rd-navbar-transparent.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-dropdown > a:after, .rd-navbar-center.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-dropdown > a:after, .rd-navbar-minimal.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-dropdown > a:after, .rd-navbar-default.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-megamenu > a:after, .rd-navbar-transparent.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-megamenu > a:after, .rd-navbar-center.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-megamenu > a:after, .rd-navbar-minimal.rd-navbar-static .rd-navbar-nav > li.rd-navbar--has-megamenu > a:after {
-  content: "\f0d7";
-  font-family: "FontAwesome";
+  /*content: "\f0d7";
+  font-family: "FontAwesome";*/
   font-size: 14px;
   color: inherit;
   padding-left: 13px;
@@ -30861,8 +30862,9 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
   top: 100%;
   left: 0;
   z-index: 1;
-  width: 240px;
-  padding: 30px;
+  width: 280px;
+  /*padding: 10px 20px;*/
+  padding: 0;
   visibility: hidden;
   transition: .3s all ease;
   text-align: left;
@@ -30922,22 +30924,33 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li, .rd-navbar-transparent.rd-navbar-static .rd-navbar-dropdown li, .rd-navbar-center.rd-navbar-static .rd-navbar-dropdown li, .rd-navbar-minimal.rd-navbar-static .rd-navbar-dropdown li, .rd-navbar-default.rd-navbar-static .rd-navbar-megamenu li, .rd-navbar-transparent.rd-navbar-static .rd-navbar-megamenu li, .rd-navbar-center.rd-navbar-static .rd-navbar-megamenu li, .rd-navbar-minimal.rd-navbar-static .rd-navbar-megamenu li {
   position: relative;
+  border-bottom: 1px dotted #eee;
+  padding-left: 20px;
+}
+
+.rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li:last-child{
+  border:none;
+}
+
+.rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li:hover{
+  background: #f2f2f2;
 }
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-transparent.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-center.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-minimal.rd-navbar-static .rd-navbar-dropdown li > a, .rd-navbar-default.rd-navbar-static .rd-navbar-megamenu li > a, .rd-navbar-transparent.rd-navbar-static .rd-navbar-megamenu li > a, .rd-navbar-center.rd-navbar-static .rd-navbar-megamenu li > a, .rd-navbar-minimal.rd-navbar-static .rd-navbar-megamenu li > a {
   font-weight: 300;
   display: block;
-  padding-left: 25px;
-  padding-right: 25px;
+ /* padding-left: 25px;
+  padding-right: 25px;*/
+  line-height: 40px;
 }
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li > a:before, .rd-navbar-transparent.rd-navbar-static .rd-navbar-dropdown li > a:before, .rd-navbar-center.rd-navbar-static .rd-navbar-dropdown li > a:before, .rd-navbar-minimal.rd-navbar-static .rd-navbar-dropdown li > a:before, .rd-navbar-default.rd-navbar-static .rd-navbar-megamenu li > a:before, .rd-navbar-transparent.rd-navbar-static .rd-navbar-megamenu li > a:before, .rd-navbar-center.rd-navbar-static .rd-navbar-megamenu li > a:before, .rd-navbar-minimal.rd-navbar-static .rd-navbar-megamenu li > a:before {
   position: absolute;
   left: 0;
   top: -2px;
-  content: "\f105";
-  font-family: "FontAwesome";
-  font-size: 16px;
+  /*content: "\f105";
+  font-family: "FontAwesome";*/
+  font-size: 14px;
 }
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li > a > span, .rd-navbar-transparent.rd-navbar-static .rd-navbar-dropdown li > a > span, .rd-navbar-center.rd-navbar-static .rd-navbar-dropdown li > a > span, .rd-navbar-minimal.rd-navbar-static .rd-navbar-dropdown li > a > span, .rd-navbar-default.rd-navbar-static .rd-navbar-megamenu li > a > span, .rd-navbar-transparent.rd-navbar-static .rd-navbar-megamenu li > a > span, .rd-navbar-center.rd-navbar-static .rd-navbar-megamenu li > a > span, .rd-navbar-minimal.rd-navbar-static .rd-navbar-megamenu li > a > span {
@@ -30961,16 +30974,16 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
   top: 50%;
   right: 13px;
   font-size: 22px;
-  font-family: "Material Design Icons";
+  /*font-family: "Material Design Icons";
   line-height: 34px;
   content: "";
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
-  transition: .3s all ease;
+  transition: .3s all ease;*/
 }
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-dropdown li + li, .rd-navbar-transparent.rd-navbar-static .rd-navbar-dropdown li + li, .rd-navbar-center.rd-navbar-static .rd-navbar-dropdown li + li, .rd-navbar-minimal.rd-navbar-static .rd-navbar-dropdown li + li, .rd-navbar-default.rd-navbar-static .rd-navbar-megamenu li + li, .rd-navbar-transparent.rd-navbar-static .rd-navbar-megamenu li + li, .rd-navbar-center.rd-navbar-static .rd-navbar-megamenu li + li, .rd-navbar-minimal.rd-navbar-static .rd-navbar-megamenu li + li {
-  margin-top: 14px;
+  margin-top: 0px;
 }
 
 .rd-navbar-default.rd-navbar-static .rd-navbar-search, .rd-navbar-transparent.rd-navbar-static .rd-navbar-search, .rd-navbar-center.rd-navbar-static .rd-navbar-search, .rd-navbar-minimal.rd-navbar-static .rd-navbar-search {
@@ -31185,7 +31198,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
   content: "";
   height: 100%;
   width: 10000px;
-  background: #3db7ef;
+  background: #333;
   right: -1000px;
   top: 0;
   z-index: -1;
@@ -31297,7 +31310,7 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
   width: 10000px;
   left: -100px;
   /*background: #172646;*/
-  background: #333;
+  background: #3db7ef;
   transition: 0.35s all ease;
   z-index: -1;
 }
@@ -31358,9 +31371,6 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
 .rd-navbar-default.rd-navbar-static.rd-navbar--is-stuck .rd-navbar-menu-wrap:before {
   /*left: -100%;*/
   left: 10%;
-}
-
-.rd-navbar-default.rd-navbar-static.rd-navbar--is-stuck .rd-navbar-menu-wrap:after {
   position: absolute;
     content: "";
     height: 100%;
@@ -31368,8 +31378,11 @@ fieldset[disabled] .swiper-slide-caption .btn-default {
     right: calc(80% + 20px);
     background: #3db7ef;
     transform: skew(-36deg);
-    z-index: 9999;
-    margin-top: -52px;
+    z-index: -1;
+}
+
+.rd-navbar-default.rd-navbar-static.rd-navbar--is-stuck .rd-navbar-menu-wrap:after {
+  
 }
 .rd-navbar-default.rd-navbar-static.rd-navbar--is-stuck .shell {
   height: 0;
