--- a/css/style.css
+++ b/css/style.css
@@ -25692,6 +25692,21 @@ textarea.form-control {
   position: relative;
   background: #212121;
   padding: 20px 15px 20px 15px;
+
+}
+
+.quote-form-body .photo{
+  margin-top: 20px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-right: auto;
+  margin-left: auto;
+  overflow:hidden;
+}
+
+.quote-form-body .photo img{
+  height: 100%;
 }
 
 .quote-form h3 {
